# Virtual-Event-Management-System

./: OOP poster.pptx  README.md  events.h  implementation.cpp
GUI/virtual_system/: CMakeLists.txt  calender.cpp  calender.h  calender.ui  cancel.cpp  cancel.h  cancel.ui  createmeeting.cpp  createmeeting.h  createmeeting.ui  events.h  events.txt  feedback.cpp  feedback.h  feedback.txt  feedback.ui  loginDataBase.txt  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  menu.cpp  menu.h  menu.ui  postpone.cpp  postpone.h  postpone.ui  register.cpp  register.h  register.ui  search.cpp  search.h  search.ui  signup.cpp  signup.h  signup.ui
